DBZ-9214 Remove KafkaContainer usage for StrimziKafkaContainer
Signed-off-by: AlvarVG <alvigo92@gmail.com>